cmdstan first attempt

--- a/vignettes/thesis.bib
+++ b/vignettes/thesis.bib
@@ -5,7 +5,13 @@
   year={2017}
 }
 
-
+@Manual{cmdstanr_2024,
+  title = {cmdstanr: R Interface to 'CmdStan'},
+  author = {Jonah Gabry and Rok Češnovar and Andrew Johnson and Steve Bronder},
+  year = {2024},
+  note = {R package version 0.8.1, https://discourse.mc-stan.org},
+  url = {https://mc-stan.org/cmdstanr/},
+}
 
 @article{duffield2024state,
   title={A state-space perspective on modelling and inference for online skill rating},
