--- a/vignettes/footBayes_a_rapid_guide.Rmd
+++ b/vignettes/footBayes_a_rapid_guide.Rmd
@@ -211,7 +211,7 @@ P_{X, Y}(x,y) = \textrm{Pr}(X=x, Y=y) = \begin{cases} (1-p) \text{BP}(\lambda_1,
 where $D(x, \eta)$ is a discrete distribution with parameter vector $\eta$.
 
 
-Now it's time to fit and interpret the models, and we'll mainly focus on the bivariate Poisson case. Classical estimates for BP models are provided, among the others, by <span style="color:red">@karlis2003analysis</span>  (MLE through an EM algorithm) and <span style="color:red">@koopman2015dynamic</span>; in the following, we quickly revise the maximum likelihood approach, but we'll deeply focus on Bayesian estimation with the underlying ```rstan``` software to better capture:
+Now it's time to fit and interpret the models, and we'll mainly focus on the bivariate Poisson case. Classical estimates for BP models are provided, among the others, by <span style="color:red">@karlis2003analysis</span>  (MLE through an EM algorithm) and <span style="color:red">@koopman2015dynamic</span>; in the following, we quickly revise the maximum likelihood approach, but we'll deeply focus on Bayesian estimation with the underlying ```CmdStan``` software to better capture:
 
 - parameters' uncertainty;
 
@@ -277,10 +277,6 @@ $$\pi(\boldsymbol{\theta}|\mathcal{D}) = \frac{p(\mathcal{D}|\boldsymbol{\theta}
 
 where $p(\mathcal{D}|\boldsymbol{\theta})$ is the model sampling distribution (proportional to the likelihood function), $\pi(\boldsymbol{\theta})$ is the joint prior distribution for $\boldsymbol{\theta}$, and $p(\mathcal{D})= \int_{\Theta} p(\mathcal{D}|\boldsymbol{\theta})\pi(\boldsymbol{\theta}) d\theta$ is the marginal likelihood that does not depend on $\theta$.
 
-In the majority of the cases, $\pi(\boldsymbol{\theta}|\mathcal{D})$ does not have a closed form and for such reason we need to approximate it by simulation. The most popular class of algorithms designed to achieve this task is named **Markov Chain Monte Carlo Methods** (see <span style="color:red">@Casella_Robert_2013</span> for a deep theoretical overview). These methods allow to sample weak correlated samples from some Markov chains whose stationary and limiting distribution coincide with the posterior distribution that we wish to approximate and sample from.
-
-The ```footBayes``` package relies on a sophisticated MCMC enginery, namely the **Hamiltonian Monte Carlo** performed by the Stan software: the HMC borrow its name from the Hamiltonian dynamics of physics and is aimed at suppressing random-walk and wasteful behaviours in the exploration of the posterior distribution which typically arise when using the Gibbs sampling and the Metropolis-Hastings algorithm. For a deep and great summary about HMC, you may read the paper <span style="color:red">@betancourt2017conceptual</span>.
-
 In terms of inferential conclusions, we are usually interested in summaries from the marginal posterior distributions of the single parameters: posterior means, medians, credibility intervals, etc.. We can write out the formula for the posterior distribution of the bivariate Poisson model above as:
 
 $$\pi(\boldsymbol{\theta}|\mathcal{D}) \propto \pi(\boldsymbol{\theta}) \prod_{n=1}^N \mathsf{BivPoisson}(\lambda_{1n}, \lambda_{2n}, \lambda_{3n}),$$ 
@@ -296,6 +292,29 @@ The standard approach is to assign some **weakly-informative** prior distributio
 
 with **hyperparameters** $\mu_{\text{att}}, \sigma_{\text{att}}, \mu_{\text{def}}, \sigma_{\text{def}}$. The model formulation is completed by assigning some weakly-informative priors to the remaining parameters. In what follows, some priors' options will be handled directly by the user.
 
+
+In the majority of the cases, $\pi(\boldsymbol{\theta}|\mathcal{D})$ does not have a closed form and for such reason we need to approximate it by simulation. The most popular class of algorithms designed to achieve this task is named **Markov Chain Monte Carlo Methods** (see <span style="color:red">@Casella_Robert_2013</span> for a deep theoretical overview). These methods allow us to generate weakly correlated samples from Markov chains whose stationary distributions coincide with the target posterior.
+
+The **footBayes** package provides a suite of advanced algorithms for approximating posterior distributions. Each of these methods offers a different balance of computational efficiency and approximation accuracy, providing users with flexible tools for posterior analysis. Its features include:
+
+
+##### Hamiltonian Monte Carlo (HMC)
+
+The package leverages HMC via the Stan software for efficient MCMC sampling. Named after Hamiltonian dynamics in physics, HMC mitigates the random-walk behavior and inefficiencies often encountered with Gibbs sampling or the Metropolis-Hastings algorithm. For further details see <span style="color:red">@betancourt2017conceptual</span> and the [CmdStan users's guide page](https://mc-stan.org/docs/cmdstan-guide/mcmc_config.html).
+
+##### Variational Inference Methods
+
+**footBayes** supports two variational inference techniques:
+
+-   **Automatic Differentiation Variational Inference (ADVI):**\
+    ADVI approximates the Evidence Lower Bound (ELBO) using Monte Carlo integration and optimizes it in the real-coordinate space via stochastic gradient ascent. For further details see <span style="color:red">@kucukelbir2017automatic</span> and the [CmdStan users's guide page](https://mc-stan.org/docs/cmdstan-guide/variational_config.html).
+
+-   **Pathfinder Algorithm:**\
+    Starting from a random initialization, Pathfinder follows a quasi-Newton optimization path. It estimates the local covariance using negative inverse Hessian estimates from the LBFGS optimizer and returns draws from the Gaussian approximation that minimizes the Kullback-Leibler (KL) divergence to the true posterior. For further details see <span style="color:red">@Pathfinder</span> and the [CmdStan users's guide page](https://mc-stan.org/docs/cmdstan-guide/pathfinder_config.html).
+
+##### Laplace Approximation
+
+This method operates in an unconstrained parameter space. For parameters that are originally constrained, the approximation is computed at the mode in the unconstrained space, and the resulting normal approximation is transformed back into the constrained space before output. For further details see its [CmdStan users's guide page](https://mc-stan.org/docs/cmdstan-guide/laplace_sample_config.html).
 
 
 # Installing the package
@@ -330,7 +349,7 @@ library(dplyr)
 
 # Bradley-Terry-Davidson model fit
 
-The ```btd_foot``` function fits a Bayesian Bradley-Terry-Davidson (BTD) model by generating posterior samples using Hamiltonian Monte Carlo within the underlying ```rstan``` ecosystem. It supports both static and dynamic ranking models, allowing for the estimation of team strengths over time. 
+The ```btd_foot``` function fits a Bayesian Bradley-Terry-Davidson (BTD) model by generating posterior samples using Hamiltonian Monte Carlo within the underlying ```rstan``` ecosystem. It supports both static and dynamic ranking models, allowing for the estimation of team strengths over time.
 
 ## Using ```btd_foot```
 In this section, we will walk through the steps to use the ```btd_foot``` function effectively, including preparing the data, choosing model options, and interpreting the results. Specifically the data must be in a specific format required by the ```btd_foot``` function. It should be a data frame with the following columns:
@@ -371,16 +390,16 @@ italy_2020_2021 <- italy %>%
 ```
 
 
-One of the most important features implemented in the ```btd_foot``` function is the possibility to choose between assuming that team strengths are constant over time or allowing team strengths to change across different time periods. Specifically, following the approach proposed by  <span style="color:red"> @owen2011dynamic </span>, <span style="color:red"> @egidi2018combining</span>, and <span style="color:red"> @demartino2024alternative</span> for the attack and defense abilities in goal-based models, we can assume that the log-strength parameters vary across a given number of weeks or seasons $1, \ldots, \mathcal{T}$. To capture these dynamics, we assign the priors for the log-strength parameters to be auto-regressive of order 1 for each time period $\tau=2,\ldots, \mathcal{T}$: 
+One of the most important features implemented in the ```btd_foot``` function is the possibility to choose between assuming that team strengths are constant over time or allowing team strengths to change across different time periods. Specifically, following the approach proposed by  <span style="color:red"> @owen2011dynamic </span>, <span style="color:red"> @egidi2018combining</span>, and <span style="color:red"> @demartino2024alternative</span> for the attack and defense abilities in goal-based models, we can assume that the log-strength parameters vary across a given number of weeks or seasons $1, \ldots, \mathcal{T}$. To capture these dynamics, we assign the priors for the log-strength parameters to be auto-regressive of order 1 for each time period $\tau=2,\ldots, \mathcal{T}$:
 
 \begin{align}
-\psi_{t,\tau} \sim \mathrm{N}(\mu_{\psi_{t-1,\tau}}, \sigma_\psi)        
+\psi_{t,\tau} \sim \mathrm{N}(\mu_{\psi_{t-1,\tau}}, \sigma_\psi)
 \end{align}
 
 
-whereas for $\tau = 1$: 
+whereas for $\tau = 1$:
 \begin{align}
-\psi_{t,1} &\sim \mathrm{N}(\mu_\psi,\sigma_\psi),  
+\psi_{t,1} &\sim \mathrm{N}(\mu_\psi,\sigma_\psi),
 \end{align}
 
 with $\mu_\psi$ being the initial mean of the log-strength parameter and $\sigma_\psi$ the standard deviation for the log-strength parameter, assumed to be constant across time and teams.
@@ -440,9 +459,9 @@ print(fit_result_stat,
 ```
 
 Another significant feature implemented in the ```btd_foot``` function is the ability to account for the **home-field effect**. This effect represents the psychological or logistical benefits that the home team may have over the visiting team. This is modeled as a multiplicative order effect <span style="color:red"> @davidson_beaver_1977</span> in the Bayesian BTD framework. This multiplicative parameter becomes in the
-log-scale an additive term as show 
+log-scale an additive term as show
 \begin{align}
-    p_{ij}^W &= \dfrac{\exp(\psi_i + \text{home})}{\exp(\psi_i + \text{home})+\exp(\psi_j)+\exp(\nu+ (\psi_i+ \text{home} + \psi_j)/2)},\\  
+    p_{ij}^W &= \dfrac{\exp(\psi_i + \text{home})}{\exp(\psi_i + \text{home})+\exp(\psi_j)+\exp(\nu+ (\psi_i+ \text{home} + \psi_j)/2)},\\
     p_{ij}^D &=  \dfrac{\exp(\nu+(\psi_i + \text{home} + \psi_j)/2)}{\exp(\psi_i+ \text{home})+\exp(\psi_j)+\exp(\nu+ (\psi_i + \text{home} + \psi_j)/2)},\\
     p_{ij}^L &= \dfrac{\exp(\psi_j)}{\exp(\psi_i + \text{home})+\exp(\psi_j)+\exp(\nu+ (\psi_i + \text{home} + \psi_j)/2)},
 \end{align}
@@ -451,13 +470,13 @@ where $\text{home}$ is the home effect parameter. The argument ```home_effect```
 - ```home_effect = TRUE```: includes a home effect in the model.
 - ```home_effect = FALSE```:  excludes a home effect in the model.
 
-The ```prior_par``` argument allows the user to specify a list of prior distributions for the model parameters. The priors must be normal distributions. The default priors are the following one 
+The ```prior_par``` argument allows the user to specify a list of prior distributions for the model parameters. The priors must be normal distributions. The default priors are the following one
 \begin{align}
-    \psi &\sim \mathrm{N}(0,3),\\        
+    \psi &\sim \mathrm{N}(0,3),\\
     \nu &\sim \mathrm{N}(0,0.3), \\
     \text{home} & \sim \mathrm{N}(0,5)
 \end{align}
- 
+
 Below is an example of how to incorporate the home-field effect into the ```btd_foot``` function by modifying the priors and enabling the home_effect parameter.
 
 ```{r BTD_model_2, message = FALSE, results='hide', echo = TRUE, eval = TRUE}
@@ -511,6 +530,29 @@ print(fit_result_stat_2,
 )
 ```
 
+The `btd_foot` function offers flexibility in how the posterior distributions are obtained by allowing users to choose the estimation method via the `method` argument. This argument enables the user to balance computational efficiency with the precision of uncertainty estimates. The available options include:
+
+- ```MCMC```: Uses Hamiltonian Monte Carlo (HMC) (Default).
+
+- ```VI```: Uses the Automatic differentiation variational inference (ADVI) algorithm.
+
+- ```pathfinder```:  Uses the Pathfinder variational inference algorithm.
+  
+- ```laplace```: Uses the Laplace algorithm.
+
+Below is an example that demonstrates how to use Variational Inference as the estimation method:
+
+```{r BTD_model_vi, message = FALSE, results='hide', echo = TRUE, eval = TRUE}
+# Variational Inference Example
+fit_result_vi <- btd_foot(
+  data = italy_2020_2021,
+  dynamic_rank = TRUE,
+  rank_measure = "mean",
+  method = "VI"
+)
+
+```
+
 ## Visualization tools
 
 After fitting the model, the ```btd_foot``` function outputs an object of class ```btdFoot```. This object can be used by the ```plot_btdPosterior``` function, which is designed to visualize the posterior distributions for the log-strenghts, log-tie and home effect parameters, providing insights into the uncertainty and variability of estimates. Depending on the specifications, it can generate either boxplots or density plots of the posterior distributions. In the case of a dynamic Bayesian BTD model, the function produces a sequence of boxplots for each time period and for each team specified in the ```teams``` argument, or for all analyzed teams if this argument is omitted.
@@ -552,7 +594,7 @@ plot_btdPosterior(fit_result_stat,
 ```
 
 
-Additionally, it is possible to plot the posterior density by setting  ```plot_type = "density"```  
+Additionally, it is possible to plot the posterior density by setting  ```plot_type = "density"```
 
 
 ```{r plot_btdPosterior_teams_dyn_dens, echo = TRUE, eval = TRUE, fig.show="hold"}
@@ -597,14 +639,14 @@ To start with some analysis, let's now ```italy```  data about the Italian Serie
 
 - The Bayesian approach: the ```stan_foot``` function produces an Hamiltonian Monte Carlo posterior sampling by using the underlying ```rstan``` ecosystem. The user can choose the number of iterations (```iter```), the number of Markov chains (```chains```), and other optional arguments values. The output is an object of class ```stanFoot```.
 
-At this stage, we are currently ignoring any time-dependence in our parameters, considering them to be **static** across distinct match-times.  
+At this stage, we are currently ignoring any time-dependence in our parameters, considering them to be **static** across distinct match-times.
 
 ```{r static_fit, message = FALSE, results='hide', echo = TRUE, eval = TRUE}
 ### Use Italian Serie A 2000/2001
 
-## with 'tidyverse' environment
+## with 'dplyr' environment
 #
-# library(tidyverse)
+# library(dplyr)
 # italy <- as_tibble(italy)
 # italy_2000<- italy %>%
 #  dplyr::select(Season, home, visitor, hgoal,vgoal) #%>%
@@ -612,7 +654,7 @@ At this stage, we are currently ignoring any time-dependence in our parameters, 
 # italy_2000
 
 ## alternatively, you can use the basic 'subsetting' code,
-## not using the 'tidyverse' environment:
+## not using the 'dplyr' environment:
 data("italy")
 italy <- as.data.frame(italy)
 italy_2000 <- subset(
@@ -627,7 +669,7 @@ colnames(italy_2000) <- c("periods", "home_team", "away_team", "home_goals", "aw
 ## no dynamics, no predictions
 ## 4 Markov chains, 'n_iter' iterations each
 
-n_iter <- 200 # number of MCMC iterations
+n_iter <- 200 # number of MCMC iterations after the burn-in
 fit1_stan <- stan_foot(
   data = italy_2000,
   model = "biv_pois",
@@ -651,6 +693,27 @@ print(fit1_stan,
 )
 ```
 
+In addition the `stan_foot` function provides flexibility in obtaining posterior distributions by allowing users to choose the estimation method via the `method` argument. The available options include:
+
+- ```MCMC```: Uses Hamiltonian Monte Carlo (HMC) (Default).
+
+- ```VI```: Uses the Automatic differentiation variational inference (ADVI) algorithm.
+
+- ```pathfinder```:  Uses the Pathfinder variational inference algorithm.
+  
+- ```laplace```: Uses the Laplace algorithm.
+
+Below is an example that demonstrates how to use Pathfinder algorithm as the estimation method:
+
+```{r stan_foot_model_pth, message = FALSE, results='hide', echo = TRUE, eval = TRUE}
+# Pathfinder algorithm example
+fit1_stan_path <- stan_foot(
+  data = italy_2000,
+  model = "biv_pois",
+  method = "pathfinder"
+) # biv poisson
+
+```
 
 The **Gelman-Rubin statistic** $\hat{R}$ (```Rhat```) is below the threshold 1.1 for all the parameters, whereas the **effective sample size** (```n_eff```), measuring the approximate number of iid replications from the Markov chains, does not appear to be problematic. Thus, HMC sampling reached the convergence.
 
@@ -713,15 +776,15 @@ One of the common practices in Bayesian statistics is to change the priors and p
  \text{def}_t &\sim \mathrm{N}(\mu_{\text{def}}, \sigma_{\text{def}}),\\
  \sigma_{\text{att}},  \sigma_{\text{def}} &\sim \mathsf{Cauchy}^+(0,5),
  \end{align}
- 
+
  where $\mathsf{Cauchy}^+$ denotes the half-Cauchy distribution with support $[0, +\infty)$. However, the user is free to elicit some different priors, possibly choosing one among the following distributions: Gaussian (```normal```), student-$t$ (```student_t```), Cauchy (```cauchy```) and Laplace (```laplace```). The ```ability``` optional argument allows to specify the priors for the team-specific parameters $\text{att}$ and $\text{def}$, whereas the optional argument ```ability_sd``` allows to assign a prior to the group-level standard deviations $\sigma_{\text{att}}, \sigma_{\text{def}}$.  For instance, for each team $t, t=1,\ldots,T$, we could consider:
- 
+
 \begin{align}
  \text{att}_t &\sim t(4, \mu_{\text{att}}, \sigma_{\text{att}}),\\
  \text{def}_t &\sim t(4, \mu_{\text{def}}, \sigma_{\text{def}}),\\
  \sigma_{\text{att}},  \sigma_{\text{def}} &\sim \mathsf{Laplace}^+(0,1),
  \end{align}
- 
+
 where $t(\text{df}, \mu, \sigma)$ denotes a student-$t$ distribution with df degrees of freedom, location $\mu$ and scale $\sigma$, whereas $\mathsf{Laplace}^+$ denotes a half-Laplace distribution.
 
 ```{r static_fit_priors, message = FALSE, results='hide', echo =TRUE, eval = TRUE}
@@ -774,13 +837,13 @@ For such reason, the most appropriate specification for the ```ability``` argume
 
 A structural limitation in the previous models is the assumption of static team-specific parameters, namely teams are assumed to have a constant performance across time, as determined by the attack and defence abilities (att, def). However, teams' performance tend to be *dynamic* and change across different years, if not different weeks. Many factors contribute to this football aspect:
 
-(i) teams act during the summer/winter players' transfermarket, by dramatically changing their rosters; 
+(i) teams act during the summer/winter players' transfermarket, by dramatically changing their rosters;
 
-(ii) some teams' players could be injured in some periods, by affecting the global quality of the team in some matches; 
+(ii) some teams' players could be injured in some periods, by affecting the global quality of the team in some matches;
 
-(iii) coaches could be dismissed from their teams due to some non satisfactory results; 
+(iii) coaches could be dismissed from their teams due to some non satisfactory results;
 
-(iv) some teams could improve/worsen their attitudes due to the so-called turnover; 
+(iv) some teams could improve/worsen their attitudes due to the so-called turnover;
 
 and many others. Again, we could assume **dynamics** in the attach/defence
  abilities as in <span style="color:red"> @owen2011dynamic </span>, <span style="color:red"> @egidi2018combining</span> and <span style="color:red"> @demartino2024alternative</span> in terms of weeks or seasons. In such framework, for a given
@@ -809,13 +872,14 @@ with hyperparameters $\mu_{\text{att}}, \mu_{\text{def}}, \sigma_{\text{att}}, \
 ```{r dynamic_fit,message = FALSE, results='hide', echo =TRUE, eval = TRUE}
 ### Fit Stan models
 ## seasonal dynamics, no predictions
-## 4 Markov chains, 'n_iter' iterations each
+## 2 Markov chains, 'n_iter' iterations each
 
 fit2_stan <- stan_foot(
   data = italy_2000,
   model = "biv_pois",
   dynamic_type = "weekly",
-  # parallel_chains = 4,
+  # parallel_chains = 2,
+  chains = 2,
   iter_sampling = n_iter
 ) # biv poisson
 ```
@@ -834,13 +898,14 @@ To deal with these issues and broaden the set of candidate models, let's fit als
 ```{r weekly_fit, message = FALSE, results='hide', echo = TRUE, eval = TRUE}
 ### Fit Stan models
 ## weekly dynamics, no predictions
-## 4 chains, 'n_iter' iterations each
+## 2 chains, 'n_iter' iterations each
 
 fit3_stan <- stan_foot(
   data = italy_2000,
   model = "double_pois",
   dynamic_type = "weekly",
-  # parallel_chains = 4,
+  # parallel_chains = 2,
+  chains = 2,
   iter_sampling = n_iter
 ) # double poisson
 ```
@@ -864,7 +929,7 @@ The fitting problems mentioned above remain also for the double Poisson model...
 ```{r weekly_fit_t, message = FALSE, results='hide', echo = TRUE, eval = TRUE}
 ### Fit Stan models
 ## weekly dynamics, no predictions
-## 4 chains, 'n_iter' iterations each
+## 2 chains, 'n_iter' iterations each
 
 fit3_stan_t <- stan_foot(
   data = italy_2000,
@@ -875,7 +940,8 @@ fit3_stan_t <- stan_foot(
     home = normal(0, 5)
   ),
   dynamic_type = "weekly",
-  # parallel_chains = 4,
+  # parallel_chains = 2,
+  chains = 2,
   iter_sampling = n_iter
 ) # double poisson
 ```
@@ -975,7 +1041,8 @@ fit_stan_rank <- stan_foot(
     home = normal(0, 5)
   ),
   dynamic_type = "season",
-  # parallel_chains = 4,
+  chains = 2,
+  # parallel_chains = 2,
   iter_sampling = 1000
 )
 ```
@@ -999,8 +1066,8 @@ We can produce the team-specific abilities for the two static fits above, ```fit
 ```{r abilities, echo = TRUE, eval = TRUE, fig.show="hold"}
 ## Plotting abilities: credible and confidence 95% intervals
 
-foot_abilities(object = fit1_stan, data = italy_2000, cex.var = 1)
-foot_abilities(object = fit1_mle, data = italy_2000, cex.var = 1)
+foot_abilities(object = fit1_stan, data = italy_2000)
+foot_abilities(object = fit1_mle, data = italy_2000)
 ```
 
 AS Roma, the team winning the Serie A 2000/2001, is associated with the highest attack ability and the lowest defence ability according to both the models. In general, the models seem to well capture the static abilities: AS Roma, Lazio Roma and Juventus (1st, 3rd and 2nd at the end of that season, respectively) are rated as the best teams in terms of their abilities, whereas AS Bari, SSC Napoli and Vicenza Calcio (all relegated at the end of the season) have the worst abilities.
@@ -1092,14 +1159,15 @@ We may then predict test set matches by using the argument ```predict``` of the 
 ```{r weekly_predict,message = FALSE, results='hide', echo=TRUE, eval = TRUE}
 ### Fit Stan models
 ## weekly dynamics, predictions of last four weeks
-## 4 chains 'n_iter' iterations each
+## 2 chains 'n_iter' iterations each
 
 fit4_stan <- stan_foot(
   data = italy_2000,
   model = "biv_pois",
   predict = 36,
   dynamic_type = "weekly",
-  # parallel_chains = 4,
+  # parallel_chains = 2,
+  chains = 2,
   iter_sampling = n_iter
 ) # biv poisson
 ```
@@ -1140,7 +1208,7 @@ Red cells denote more likely home-wins (close to 0.6), such as: Lazio Roma - Fio
 
 ## Rank-league reconstruction
 
-Statisticians and football amateurs are much interested in the final rank-league predictions. However, predicting the final rank position (along with the teams' points) is often assimilated to an *oracle*, rather than a coherent statistical procedure. 
+Statisticians and football amateurs are much interested in the final rank-league predictions. However, predicting the final rank position (along with the teams' points) is often assimilated to an *oracle*, rather than a coherent statistical procedure.
 
 We can provide here:
 
@@ -1262,8 +1330,6 @@ compare_results_models <- compare_foot(
 
 print(compare_results_models, digits = 3)
 ```
-
-
 
 
 ## LOOIC and WAIC
