--- a/vignettes/thesis.bib
+++ b/vignettes/thesis.bib
@@ -58,6 +58,28 @@
   year={2017}
 }
 
+@article{kucukelbir2017automatic,
+  title={Automatic differentiation variational inference},
+  author={Kucukelbir, Alp and Tran, Dustin and Ranganath, Rajesh and Gelman, Andrew and Blei, David M},
+  journal={Journal of machine learning research},
+  volume={18},
+  number={14},
+  pages={1--45},
+  year={2017}
+}
+
+
+
+@article{Pathfinder,
+  author  = {Lu Zhang and Bob Carpenter and Andrew Gelman and Aki Vehtari},
+  title   = {Pathfinder:  Parallel quasi-Newton variational inference},
+  journal = {Journal of Machine Learning Research},
+  year    = {2022},
+  volume  = {23},
+  number  = {306},
+  pages   = {1--49},
+  url     = {http://jmlr.org/papers/v23/21-0889.html}
+}
 
 
 @Article{IssaMattos2022,
